did a setup for the auth system on the backend side using better-auth

--- a/apps/backend/.env.test
+++ b/apps/backend/.env.test
@@ -1,4 +1,7 @@
 NODE_ENV=test
-PORT=9999
+PORT=3000
 LOG_LEVEL=silent
-DATABASE_URL=file:test.db
+DATABASE_URL=postgres://user:password@localhost:5432/mydb
+
+BETTER_AUTH_SECRET=x1GtBxfworsKeXOZIkDHshaaKT37hlUN
+BETTER_AUTH_URL=http://localhost:3000 #Base URL of your app (backend) for better auth to be working
