--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,4 +1,7 @@
 NODE_ENV=development
-PORT=9999
+PORT=3000
 LOG_LEVEL=debug
-DATABASE_URL=file:dev.db
+DATABASE_URL=postgres://user:password@localhost:5432/mydb
+
+BETTER_AUTH_SECRET=put here your secter
+BETTER_AUTH_URL=http://localhost:3000 #Base URL of your app (backend) for better auth to be working
