--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,6 +17,7 @@
     "@hono/zod-openapi": "^0.18.4",
     "@libsql/client": "^0.14.0",
     "@scalar/hono-api-reference": "^0.5.184",
+    "better-auth": "^1.2.8",
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
     "drizzle-orm": "^0.33.0",
