--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -10,9 +10,7 @@
       "@/*": ["./src/*"]
     },
     "typeRoots": ["./node_modules/@types"],
-    "types": [
-      "node"
-    ],
+    "types": ["node"],
     "strict": true,
     "outDir": "./dist",
     "skipLibCheck": true
