set up login, register, home page, add auth-client to the web app

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,25 +11,32 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
+    "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.62.7",
     "@tanstack/react-router": "^1.90.0",
-    "@types/node": "^22.10.2",
     "@uist-project/api": "workspace:^",
     "@uist-project/api-client": "workspace:^",
     "@uist-project/eslint-config": "workspace:^",
+    "better-auth": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "hono": "^4.7.4",
     "lucide-react": "^0.511.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.1",
+    "react-hook-form": "^7.56.4",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
-    "zod": "^3.24.1"
+    "zod": "^3.25.32"
   },
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^1.19.0",
@@ -37,6 +44,7 @@
     "@tanstack/eslint-plugin-query": "^5.62.1",
     "@tanstack/react-router-devtools": "^1.120.11",
     "@tanstack/router-plugin": "^1.87.13",
+    "@types/node": "^22.15.24",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
     "@vitejs/plugin-react": "^4.3.4",
