--- a/apps/web/tsconfig.app.json
+++ b/apps/web/tsconfig.app.json
@@ -6,6 +6,7 @@
     "jsx": "react-jsx",
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "paths": {
+      "@/*": ["./src/*"],
       "@/web/*": ["./src/*"]
     },
     "allowImportingTsExtensions": true,
